# c-minus-linked-llvm

./: README.md  抽象语法树(参考).doc  课程设计与实验安排.doc
LLVM IR/: cm.l  cm.tab.c  cm.y  genIR.cpp  globals.h  lex.yy.c  llvm_inc.h  log_debugger.h  main.ll  symtab_util.cpp  util.c
LLVM Pass/: CMakeLists.txt  DeadBlockElimination.cpp  DefUse.cpp  IterInsideBB.cpp  MyHello.cpp  OpcodeCounter.cpp  UseDef.cpp
include/: IRGENERATE.cpp  cm.tab.c  cm.tab.h  lex.yy.c  llvm_inc.h  symtab_util.cpp
test_case/: code.c  gcd.c  maopao.c  multiply.c  test.c  test1.c  test2.c  test3.c  test7.c  test9.c
