add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(AggressiveInstCombine)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(MyHello)
add_subdirectory(UseDef)
add_subdirectory(DefUse)
add_subdirectory(OpcodeCounter)
add_subdirectory(IterInsideBB)
add_subdirectory(DeadBlockElimination)